syntax = "proto3";
package creep.asset.v1;

// Generated from schemas/v1.0/AssetEvent.json, do not edit by hand.
message AssetEvent {
  string event_id = 1;
  string tenant_id = 2;
  string project_id = 3;
  string env = 4;
  string asset_id = 5;
  string task_id = 6;
  string lease_id = 7;
  string correlation_id = 8;
  string causation_id = 9;
  string event_type = 10;
  string source = 11;
  string severity = 12;
  string old_status = 13;
  string new_status = 14;
  string message = 15;
  string error_code = 16;
  string error_message = 17;
  string provider_status = 18;
  int64 http_status = 19;
  int64 latency_ms = 20;
  bool retryable = 21;
  string occurred_at = 22;
  string recorded_at = 23;
  repeated string tags = 24;
  string context = 25;
  int64 version = 26;
}

message AssetEventIngestResponse {
  bool ok = 1;
  string status = 2;
  string error_code = 3;
  string error_message = 4;
  string error_path = 5;
}

service AssetEventIngestService {
  rpc PostAssetEvent(AssetEvent) returns (AssetEventIngestResponse);
}

